# catalign

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test_sv_detection.py
caliview/: Cargo.toml
caliview/src/: app.rs  cali.rs  main.rs  tracks.rs  ui.rs
catalign/: __init__.py  align.py  chain.py  cli.py  energy.py  io.py  metrics.py  quality.py  sketch.py
catalign/viewer/: README.md  __init__.py  bam_converter.py  cali_format.py  metrics_tiler.py
catalign/viz/: __init__.py  alignment_view.py  cigar_viz.py  dashboard.py  dashboard_app.py  dotplot.py  heatmap.py
examples/: README.md  hg002_t2t_demo.py  mito_demo.py  na19240_t2t_demo.py  real_world_demo.py
mito_demo_output/visualizations/: alignment.html  alignment.txt
scripts/: generate_test_data.py
tests/: conftest.py  test_align.py  test_benchmarks.py  test_chain.py  test_energy.py  test_io.py  test_metrics.py  test_quality.py  test_sketch.py  test_viewer.py  test_viz.py
tests/resources/: README.md
tests/resources/benchmarks/: benchmark_100kb_query.fa  benchmark_100kb_target.fa  benchmark_10kb_query.fa  benchmark_10kb_target.fa  benchmark_50kb_query.fa  benchmark_50kb_target.fa
tests/resources/ground_truth/: benchmark_100kb.json  benchmark_10kb.json  benchmark_50kb.json  complex_indels_3.json  complex_indels_5.json  deletion_10bp.json  deletion_1bp.json  deletion_3bp.json  deletion_50bp.json  identical_1000bp.json  identical_100bp.json  identical_20bp.json  identical_5000bp.json  identical_500bp.json  insertion_10bp.json  insertion_1bp.json  insertion_3bp.json  insertion_50bp.json  interspersed_repeats.json  inversion_100bp.json  inversion_20bp.json  inversion_500bp.json  manifest.json  repeat_expansion_CAG_30_to_50.json  repeat_expansion_CTG_30_to_50.json  snp_multi_10.json  snp_multi_20.json  snp_multi_5.json  snp_pos0.json  snp_pos50.json  snp_pos99.json  str_AAATGGx50.json  str_AATGx50.json  str_ATGx50.json  str_ATx50.json  sv_deletion_1000bp.json  sv_deletion_100bp.json  sv_deletion_500bp.json  tandem_dup_10bp.json  tandem_dup_200bp.json  (+1 more)
tests/resources/synthetic/identical/: identical_1000bp_query.fa  identical_1000bp_target.fa  identical_100bp_query.fa  identical_100bp_target.fa  identical_20bp_query.fa  identical_20bp_target.fa  identical_5000bp_query.fa  identical_5000bp_target.fa  identical_500bp_query.fa  identical_500bp_target.fa
tests/resources/synthetic/indels/: complex_indels_3_query.fa  complex_indels_3_target.fa  complex_indels_5_query.fa  complex_indels_5_target.fa  deletion_10bp_query.fa  deletion_10bp_target.fa  deletion_1bp_query.fa  deletion_1bp_target.fa  deletion_3bp_query.fa  deletion_3bp_target.fa  deletion_50bp_query.fa  deletion_50bp_target.fa  insertion_10bp_query.fa  insertion_10bp_target.fa  insertion_1bp_query.fa  insertion_1bp_target.fa  insertion_3bp_query.fa  insertion_3bp_target.fa  insertion_50bp_query.fa  insertion_50bp_target.fa
tests/resources/synthetic/mutations/: snp_multi_10_query.fa  snp_multi_10_target.fa  snp_multi_20_query.fa  snp_multi_20_target.fa  snp_multi_5_query.fa  snp_multi_5_target.fa  snp_pos0_query.fa  snp_pos0_target.fa  snp_pos50_query.fa  snp_pos50_target.fa  snp_pos99_query.fa  snp_pos99_target.fa
tests/resources/synthetic/repetitive/: interspersed_repeats_query.fa  interspersed_repeats_target.fa  repeat_expansion_CAG_30_to_50_query.fa  repeat_expansion_CAG_30_to_50_target.fa  repeat_expansion_CTG_30_to_50_query.fa  repeat_expansion_CTG_30_to_50_target.fa  str_AAATGGx50_query.fa  str_AAATGGx50_target.fa  str_AATGx50_query.fa  str_AATGx50_target.fa  str_ATGx50_query.fa  str_ATGx50_target.fa  str_ATx50_query.fa  str_ATx50_target.fa
tests/resources/synthetic/structural/: inversion_100bp_query.fa  inversion_100bp_target.fa  inversion_20bp_query.fa  inversion_20bp_target.fa  inversion_500bp_query.fa  inversion_500bp_target.fa  sv_deletion_1000bp_query.fa  sv_deletion_1000bp_target.fa  sv_deletion_100bp_query.fa  sv_deletion_100bp_target.fa  sv_deletion_500bp_query.fa  sv_deletion_500bp_target.fa  tandem_dup_10bp_query.fa  tandem_dup_10bp_target.fa  tandem_dup_200bp_query.fa  tandem_dup_200bp_target.fa  tandem_dup_50bp_query.fa  tandem_dup_50bp_target.fa
