[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalign"
version = "0.1.0-alpha"
description = "PROTOTYPE: Bioinformatics sequence alignment tool that mimics natural molecular forces (AI-assisted vibe coding - NOT FOR PRODUCTION USE)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
viz = [
    "plotly>=5.0",
    "streamlit>=1.20",
    "pillow",
]
viewer = [
    "pysam>=0.20",
]
bench = [
    "pytest-benchmark",
    "memory-profiler",
]
dev = [
    "catalign[test,viz,viewer,bench]",
    "black",
    "ruff",
    "mypy",
]
all = [
    "catalign[test,viz,viewer,bench]",
]

[project.scripts]
catalign = "catalign.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests",
    "viz: marks visualization tests",
]

[tool.coverage.run]
source = ["catalign"]
omit = ["catalign/viz/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise ImportError",
]
