[package]
name = "caliview"
version = "0.1.0"
edition = "2021"
description = "High-performance genome alignment viewer for Catalign"
license = "MIT"
authors = ["Catalign Team"]
repository = "https://github.com/catalign/catalign"
keywords = ["bioinformatics", "genomics", "alignment", "visualization"]

[dependencies]
# Core
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# File handling
memmap2 = "0.9"
byteorder = "1.5"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Graphics (GPU-accelerated)
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.29"
egui_plot = "0.29"

# Data structures
indexmap = "2.6"
rustc-hash = "2.0"

# Compression
flate2 = "1.0"
lz4_flex = "0.11"

# Bioinformatics
noodles = { version = "0.84", features = ["bam", "cram", "fasta", "sam"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4

[[bin]]
name = "caliview"
path = "src/main.rs"
